[package]
name = "graf-lang"
description = "An esolang based on graph theory."
version = "0.1.0"
license = "MIT"
repository = "https://github.com/beanifier/graf-lang"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "graf-lang"
path = "src/bin.rs"

[dependencies]
peg = "0.8.5"
rand = "0.9.2"
